tests/ivg/invalid/define_unknown_type.ivg
format IVG-3
// unsupported define type
define foo bar []
